[FLINK-38262][table] Address connection review comments